fixed slight horizontal overflow on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 /* Color Variables */
 :root {
   --primary-color: #4caf50;
